# mithrilmd

./: .env  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  README.md  babel.config.js  justfile  moon.yml  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  tsconfig.options.json
.github/workflows/: ci.yml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: node.yml  tag-vite.yml
apps/client/: .eslintrc.cjs  README.md  moon.yml  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/client/src-tauri/src/: lib.rs  main.rs  startup.rs  state.rs  system_tray.rs  util.rs
apps/client/src-tauri/src/repository/: vault.rs
apps/client/src-tauri/src/vault/: find_vault.rs  get_vaults.rs  mod.rs  setup_vault.rs
apps/client/src/lib/: Foo.svelte  add.ts  utils.ts
apps/client/src/lib/Components/Board/: Board.svelte  Column.svelte  TaskCard.svelte  TaskDetails.svelte  taskStores.ts
apps/client/src/lib/Components/CommandPallete/: CommandPallete.svelte
apps/client/src/lib/Components/Timer/: Timer.svelte
apps/client/src/lib/Components/VaultMenu/: VaultMenuRow.svelte
apps/client/src/routes/: +layout.svelte  +page.svelte  schema.ts
apps/client/src/routes/board/: +page.svelte
apps/client/src/routes/sverdle/: +page.server.ts  +page.svelte  game.test.ts  game.ts  reduced-motion.ts
apps/client/src/routes/vault/: +page.svelte
apps/client/src/routes/vaults/[id]/board/: +page.svelte  +page.ts
apps/client/src/types/: bindings.ts
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs
crates/entity/src/entities/: mod.rs  prelude.rs  vault.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_vault_table.rs
templates/svelte-lib/: moon.yml  package.json  svelte.config.js  tailwind.config.js  template.yml  tsconfig.json  vite.config.ts
templates/svelte-lib/src/lib/: index.ts
templates/svelte-lib/src/lib/components/: ComponentFooBar.svelte
