[workspace]
resolver = "2"
members = ["apps/client/src-tauri", "crates/entity", "crates/migration"]

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
entity = { path = "crates/entity" }
migration = { path = "crates/migration" } # depends on your needs

[workspace.dependencies.sea-orm]
version = "0.12.15"
default-features = false
features = ["sqlx-sqlite", "runtime-tokio-rustls", "debug-print", "with-chrono"]
