[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
entity = { path = "../../../crates/entity" }
migration = { path = "../../../crates/migration" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [
  "window-hide",
  "window-maximize",
  "window-start-dragging",
  "window-unmaximize",
  "window-close",
  "window-unminimize",
  "window-show",
  "window-minimize",
  "system-tray"
] }
log = "0.4.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing = "0.1.40"
anyhow = "1.0.8"
dotenvy = "0.15.7"
thiserror = "1.0.63"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
chrono.workspace = true

[dependencies.sea-orm]
version = "0.12.15"
default-features = false
features = ["sqlx-sqlite", "runtime-tokio-rustls", "debug-print", "with-chrono"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
